# flight_delay_simulator

./: .env  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
flight_delay_simulator/: .gitignore  Dockerfile  README.md  pyproject.toml
flight_delay_simulator/.github/workflows/: ci.yaml
flight_delay_simulator/k8s/: ingress.yaml  namespace.yaml  secret.yaml  service.yaml
flight_delay_simulator/notebooks/: future_flight_delay_simulator.ipynb
flight_delay_simulator/src/flightrobustness/core/: models.py  simulator.py
flight_delay_simulator/src/flightrobustness/interfaces/: api.py
flight_delay_simulator/src/flightrobustness/io/: file_writer.py
flight_delay_simulator/src/flightrobustness/utils/: config_loader.py  logger.py
flight_delay_simulator/tests/: conftest.py  test_api_endpoints.py  test_cli.py  test_core_simulation.py  test_utils.py
flight_delay_simulator/tests/data/: test_schedule_single.csv
k8s/: configmap.yaml  deployment.yaml
src/flightrobustness/core/: exceptions.py  factories.py  interfaces.py  models.py  simulator.py  strategies.py
src/flightrobustness/interfaces/: api.py  cli.py
src/flightrobustness/io/: file_reader.py  file_writer.py  storage_adapters.py  visualizer.py
src/flightrobustness/utils/: config_loader.py  logger.py
tests/: conftest.py  test_api_endpoints.py  test_cli.py  test_core_simulation.py  test_io.py  test_models.py  test_storage_adapters.py  test_utils.py  test_visualizer.py
